--- a/testpoi/src/main/resources/application.properties
+++ b/testpoi/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.mvc.view.prefix=/WEB-INF/view/
 
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/poitest
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/student
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mapper/*.xml
